# maat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml  coverage.yml  fuzz.yml  security.yml
compiler/maat/: Cargo.toml  README.md
compiler/maat/src/: build.rs  cmd.rs  diagnostic.rs  exec.rs  main.rs  pipeline.rs  repl.rs  run.rs
compiler/maat_air/: Cargo.toml  README.md
compiler/maat_air/src/: air.rs  aux.rs  aux_segment.rs  constraints.rs  degree.rs  lib.rs  main_segment.rs  public_inputs.rs
compiler/maat_air/src/builtin/: bitwise.rs  identity.rs  mod.rs  range_check.rs
compiler/maat_ast/: Cargo.toml  README.md
compiler/maat_ast/src/: ast.rs  display.rs  fold.rs  format.rs  lib.rs  transform.rs
compiler/maat_ast/src/ast/: display.rs  fold.rs
compiler/maat_bytecode/: Cargo.toml  README.md
compiler/maat_bytecode/src/: instruction.rs  lib.rs  opcode.rs  selector.rs  serialize.rs
compiler/maat_codegen/: Cargo.toml  README.md
compiler/maat_codegen/src/: compile.rs  lib.rs  registry.rs  symbol.rs
compiler/maat_codegen/tests/: compiler.rs
compiler/maat_driver/: Cargo.toml
compiler/maat_driver/src/: lib.rs
compiler/maat_driver/tests/: eval.rs  lexer.rs  macros.rs  parser.rs  transform.rs
compiler/maat_errors/: Cargo.toml  README.md
compiler/maat_errors/src/: codex.rs  compile.rs  eval.rs  lib.rs  module.rs  parse.rs  ty.rs  vm.rs
compiler/maat_eval/: Cargo.toml  README.md
compiler/maat_eval/src/: builtins.rs  env.rs  eval.rs  interpreter.rs  lib.rs  macros.rs  object.rs
compiler/maat_field/: Cargo.toml  README.md
compiler/maat_field/src/: lib.rs
compiler/maat_lexer/: Cargo.toml  README.md
compiler/maat_lexer/src/: lexer.rs  lib.rs  num.rs  token.rs
compiler/maat_module/: Cargo.toml  README.md
compiler/maat_module/src/: exports.rs  graph.rs  imports.rs  lib.rs  pipeline.rs  resolve.rs  stdlib.rs
compiler/maat_parse/: Cargo.toml
compiler/maat_parse/src/: lib.rs  parser.rs
compiler/maat_parser/: Cargo.toml  README.md
compiler/maat_parser/src/: lib.rs  parser.rs  prec.rs  reserved.rs
compiler/maat_prover/: Cargo.toml  README.md
compiler/maat_prover/src/: gadgets.rs  lib.rs  options.rs  program_hash.rs  proof_file.rs  verifier.rs
compiler/maat_runtime/: Cargo.toml  README.md
compiler/maat_runtime/src/: builtins.rs  env.rs  lib.rs  num.rs  object.rs
compiler/maat_span/: Cargo.toml  README.md
compiler/maat_span/src/: lib.rs
compiler/maat_trace/: Cargo.toml  README.md
compiler/maat_trace/src/: encode.rs  lib.rs  main_segment.rs  recorder.rs  selector.rs  table.rs  vm.rs
compiler/maat_types/: Cargo.toml  README.md
compiler/maat_types/src/: check.rs  convert.rs  env.rs  fold.rs  lib.rs  promote.rs  resolve.rs  ty.rs  unify.rs
compiler/maat_vm/: Cargo.toml  README.md
compiler/maat_vm/src/: lib.rs  num.rs  trace.rs
compiler/maat_vm/tests/: vm.rs
examples/: arithmetic_and_types.maat  binary_search.mt  closures.maat  closures.mt  collections_and_stdlib.maat  control_flow.maat  crypto_primitives.maat  custom_types.maat  error_handling.maat  factorial.mt  felt_arithmetic.maat  fibonacci.mt  fixed_size_arrays.maat  functions_and_closures.maat  hello_world.maat  loops.mt  macros.mt  map_reduce.maat  map_reduce.mt  numeric_types.mt  sorting.mt  stress_test.maat  type_checked.mt
examples/modules/: geometry.maat  main.maat  math.maat
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compiler.rs  fuzz_deserializer.rs  fuzz_lexer.rs  fuzz_parser.rs  fuzz_typechecker.rs
scripts/: publish-crates.sh
src/: error.rs  eval.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs
src/eval/: builtins.rs  macros.rs  object.rs  repl.rs
src/interpreter/: builtins.rs  env.rs  mod.rs  object.rs  repl.rs
src/lexer/: mod.rs  span.rs  token.rs
src/parser/: ast.rs  mod.rs  prec.rs  transform.rs
src/tools/maat-repl/: Cargo.toml
src/tools/maat-repl/src/: main.rs  repl.rs
tests/: Cargo.toml  eval.rs  interpreter.rs  lexer.rs  macros.rs  parser.rs  transform.rs
tests/benches/: benchmarks.rs
tests/src/: lib.rs
tests/tests/: ast_display.rs  compiler.rs  custom_types.rs  eval.rs  lexer.rs  macros.rs  modules.rs  parser.rs  properties.proptest-regressions  properties.rs  prove_verify.rs  serialize.rs  transform.rs  types.rs  vm.rs
