[workspace]
resolver = "2"
members = [
    "compiler/maat_span",
    "compiler/maat_errors",
    "compiler/maat_field",
    "compiler/maat_lexer",
    "compiler/maat_ast",
    "compiler/maat_parser",
    "compiler/maat_eval",
    "compiler/maat_runtime",
    "compiler/maat_bytecode",
    "compiler/maat_types",
    "compiler/maat_codegen",
    "compiler/maat_vm",
    "compiler/maat_trace",
    "compiler/maat_air",
    "compiler/maat_module",
    "compiler/maat",
    "library",
    "tests",
]
default-members = ["compiler/maat"]
exclude = ["fuzz"]

[workspace.package]
version = "0.12.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maatlabs/maat"
homepage = "https://github.com/maatlabs/maat"
readme = "README.md"

[workspace.dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
