[workspace]
resolver = "2"
members = [
    "compiler/maat_span",
    "compiler/maat_errors",
    "compiler/maat_field",
    "compiler/maat_lexer",
    "compiler/maat_ast",
    "compiler/maat_parser",
    "compiler/maat_eval",
    "compiler/maat_runtime",
    "compiler/maat_bytecode",
    "compiler/maat_types",
    "compiler/maat_codegen",
    "compiler/maat_vm",
    "compiler/maat_trace",
    "compiler/maat_air",
    "compiler/maat_prover",
    "compiler/maat_module",
    "compiler/maat",
    "library",
    "tests",
]
default-members = ["compiler/maat"]
exclude = ["fuzz"]

[workspace.package]
version = "0.13.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maatlabs/maat"
homepage = "https://github.com/maatlabs/maat"
readme = "README.md"

[workspace.dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }

# Winterfell's prover ships an over-strict `debug_assert_eq!` that requires the
# *exact* per-constraint quotient degree to equal the declared upper bound; on
# small Maat programs that do not exercise every opcode-class selector, dormant
# selector columns interpolate to the zero polynomial and the actual quotient
# degree drops below the declared upper bound. Soundness still holds--FRI checks
# `quotient_degree <= declared`--so we disable `debug_assertions` for the test
# and bench profiles to align with release semantics.
#
# Our own `debug_assert!`s are sanity checks; production builds already run without them.
[profile.test]
debug-assertions = false

[profile.bench]
debug-assertions = false
