[package]
name = "maat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "maat"
path = "src/main.rs"

[dependencies]
ariadne.workspace = true
clap = { version = "4", features = ["derive"] }
rustyline = { version = "15", features = ["with-file-history", "derive"] }

maat_ast = { path = "../maat_ast" }
maat_bytecode = { path = "../maat_bytecode" }
maat_codegen = { path = "../maat_codegen" }
maat_errors = { path = "../maat_errors" }
maat_eval = { path = "../maat_eval" }
maat_lexer = { path = "../maat_lexer" }
maat_module = { path = "../maat_module" }
maat_parser = { path = "../maat_parser" }
maat_runtime = { path = "../maat_runtime" }
maat_types = { path = "../maat_types" }
maat_span = { path = "../maat_span" }
maat_vm = { path = "../maat_vm" }
