[package]
name = "maat_ast"
description = "Abstract syntax tree (AST) for the Maat programming language"
keywords = ["compiler", "maat", "zero-knowledge", "zk", "ast"]
categories = ["compilers"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
maat_span = { path = "../maat_span", version = "0.12.2" }
maat_errors = { path = "../maat_errors", version = "0.12.2" }
