[package]
name = "maat_bytecode"
description = "Bytecode format and serialization for the Maat virtual machine"
keywords = ["compiler", "maat", "zero-knowledge", "bytecode", "zk"]
categories = ["compilers"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
postcard = { version = "1", features = ["alloc"] }
serde.workspace = true

maat_errors = { path = "../maat_errors", version = "0.12.2" }
maat_runtime = { path = "../maat_runtime", version = "0.12.2" }
maat_span = { path = "../maat_span", version = "0.12.2" }

[dev-dependencies]
indexmap.workspace = true
