[package]
name = "maat_codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
maat_ast = { path = "../maat_ast" }
maat_bytecode = { path = "../maat_bytecode" }
maat_errors = { path = "../maat_errors" }
maat_eval = { path = "../maat_eval" }

[dev-dependencies]
maat_lexer = { path = "../maat_lexer" }
maat_parse = { path = "../maat_parse" }
