[package]
name = "maat_driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
maat_errors = { path = "../maat_errors" }
maat_lexer = { path = "../maat_lexer" }
maat_ast = { path = "../maat_ast" }
maat_parse = { path = "../maat_parse" }
maat_eval = { path = "../maat_eval" }
maat_bytecode = { path = "../maat_bytecode" }
maat_codegen = { path = "../maat_codegen" }
maat_vm = { path = "../maat_vm" }
