[package]
name = "maat_driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
maat_ast = { path = "../maat_ast" }
maat_bytecode = { path = "../maat_bytecode" }
maat_codegen = { path = "../maat_codegen" }
maat_errors = { path = "../maat_errors" }
maat_eval = { path = "../maat_eval" }
maat_lexer = { path = "../maat_lexer" }
maat_parse = { path = "../maat_parse" }
maat_runtime = { path = "../maat_runtime" }
maat_vm = { path = "../maat_vm" }
