[package]
name = "maat_eval"
description = "Tree-walking interpreter and macro expansion engine for the Maat programming language"
keywords = ["compiler", "maat", "zero-knowledge", "zk", "interpreter"]
categories = ["compilers"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
indexmap.workspace = true
maat_ast = { path = "../maat_ast", version = "0.13.0" }
maat_errors = { path = "../maat_errors", version = "0.13.0" }
maat_runtime = { path = "../maat_runtime", version = "0.13.0" }
