[package]
name = "maat_lexer"
description = "DFA-based lexer for the Maat programming language"
keywords = ["compiler", "maat", "zero-knowledge", "lexer", "zk"]
categories = ["compilers", "parser-implementations"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
logos = "0.16"
maat_span = { path = "../maat_span", version = "0.11.2" }
