[package]
name = "maat_lexer"
description = "DFA-based lexer for the Maat programming language"
keywords = ["compiler", "maat", "zero-knowledge", "zk", "lexer"]
categories = ["compilers", "parser-implementations"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
logos = "0.16"
maat_span = { path = "../maat_span", version = "0.12.3" }
