[package]
name = "maat_module"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
maat_ast = { path = "../maat_ast" }
maat_bytecode = { path = "../maat_bytecode" }
maat_codegen = { path = "../maat_codegen" }
maat_errors = { path = "../maat_errors" }
maat_lexer = { path = "../maat_lexer" }
maat_parser = { path = "../maat_parser" }
maat_runtime = { path = "../maat_runtime" }
maat_span = { path = "../maat_span" }
maat_types = { path = "../maat_types" }

[dev-dependencies]
tempfile = "3"
