[package]
name = "maat_runtime"
description = "Runtime value system for the Maat programming language"
keywords = ["compiler", "maat", "zero-knowledge", "zk", "runtime"]
categories = ["compilers"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
indexmap.workspace = true
serde.workspace = true

maat_ast = { path = "../maat_ast", version = "0.12.2" }
maat_errors = { path = "../maat_errors", version = "0.12.2" }
maat_field = { path = "../maat_field", version = "0.12.2" }
maat_span = { path = "../maat_span", version = "0.12.2" }
