[package]
name = "maat_trace"
description = "Trace-generating virtual machine for the Maat programming language"
keywords = ["compiler", "maat", "zero-knowledge", "zk", "trace"]
categories = ["compilers"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
maat_bytecode = { path = "../maat_bytecode", version = "0.13.0" }
maat_errors = { path = "../maat_errors", version = "0.13.0" }
maat_field = { path = "../maat_field", version = "0.13.0" }
maat_runtime = { path = "../maat_runtime", version = "0.13.0" }
maat_vm = { path = "../maat_vm", version = "0.13.0" }
