[package]
name = "maat_types"
description = "Hindley-Milner type inference engine for the Maat programming language"
keywords = ["compiler", "maat", "zero-knowledge", "zk", "types"]
categories = ["compilers"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
indexmap.workspace = true
maat_ast = { path = "../maat_ast", version = "0.12.2" }
maat_errors = { path = "../maat_errors", version = "0.12.2" }
maat_span = { path = "../maat_span", version = "0.12.2" }
