[package]
name = "maat_vm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
indexmap.workspace = true
maat_bytecode = { path = "../maat_bytecode" }
maat_errors = { path = "../maat_errors" }
maat_runtime = { path = "../maat_runtime" }
maat_span = { path = "../maat_span" }

[dev-dependencies]
maat_ast = { path = "../maat_ast" }
maat_codegen = { path = "../maat_codegen" }
maat_lexer = { path = "../maat_lexer" }
maat_parser = { path = "../maat_parser" }
