[package]
name = "maat_vm"
description = "Stack-based virtual machine for the Maat programming language"
keywords = ["compiler", "maat", "zero-knowledge", "zk", "vm"]
categories = ["compilers"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
indexmap.workspace = true
maat_bytecode = { path = "../maat_bytecode", version = "0.12.2" }
maat_errors = { path = "../maat_errors", version = "0.12.2" }
maat_runtime = { path = "../maat_runtime", version = "0.12.2" }
maat_span = { path = "../maat_span", version = "0.12.2" }

[dev-dependencies]
maat_ast = { path = "../maat_ast", version = "0.12.2" }
maat_codegen = { path = "../maat_codegen", version = "0.12.2" }
maat_lexer = { path = "../maat_lexer", version = "0.12.2" }
maat_parser = { path = "../maat_parser", version = "0.12.2" }
