[package]
name = "maat-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "repl"
path = "src/main.rs"

[dependencies]
maat_ast = { path = "../../../compiler/maat_ast" }
maat_eval = { path = "../../../compiler/maat_eval" }
maat_lexer = { path = "../../../compiler/maat_lexer" }
maat_parser = { path = "../../../compiler/maat_parser" }
maat_runtime = { path = "../../../compiler/maat_runtime" }
